# Whatsapp_agent

./: .env  README.md  app.py  main.py  pyproject.toml  session_whatsapp  session_whatsapp.db
database/: __init__.py  models.py
services/: ai_service.py  tools_service.py
