[project]
name = "mon-agent-groq"
version = "0.1.0"
description = "Agent IA WhatsApp Premium de niveau production utilisant Groq et PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=1.4.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "neonize>=0.3.0",
]
